Fix a layout bug in `.sidebar-layout

--- a/src/main.css
+++ b/src/main.css
@@ -242,7 +242,8 @@ figcaption {
 
 main {
 	max-inline-size: var(--eff-line-length);
-	margin: auto;
+	inline-size: 100%;
+	margin-inline: auto;
 
 	&:first-child { padding-top: var(--gap); }
 }
